# password-for-gnome

./: README.md  meson.build  org.emilien.Password.json
data/: meson.build  org.emilien.Password.appdata.xml.in  org.emilien.Password.desktop.in  org.emilien.Password.gschema.xml  org.emilien.Password.metainfo.xml.in
po/: POTFILES  fr.po  meson.build  password.pot  sv.po
src/: config.vapi  main.vala  mdpAleatoire.vala  mdpCalcul.vala  meson.build  password.gresource.xml  window.ui  window.vala
